# stac-higher

./: .env.example  AGENTS.md  CLAUDE.md  ROADMAP.md  TODO.md  docker-compose.yml  package-lock.json
app/: README.md  package.json  (+2 more)
services/pipeline/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/pipeline/src/pipeline/: __init__.py  config.py  health.py  log.py  main.py
services/pipeline/src/pipeline/connections/: __init__.py  build.py  egress.py  envelope.py  probe.py  repo.py
services/pipeline/src/pipeline/delivery/: matcher.py  payload.py  repo.py  transfer.py  worker.py
services/pipeline/src/pipeline/dispatcher/: __init__.py  loop.py  repo.py
services/pipeline/tests/: _delivery_fake.py  _dispatch_fake.py  _ingest_fake.py  _repo_fake.py  test_adapter_listing.py  test_adapter_move.py  test_adapters.py  test_build_adapter.py  test_config.py  test_delivery_jobs.py  test_delivery_matcher.py  test_delivery_payload.py  test_delivery_repo_fake.py  test_delivery_transfer.py  test_delivery_worker.py  test_dispatch_loop.py  test_drain.py  test_egress.py  test_envelope.py  test_health.py  test_health_sweep.py  test_ingest_config.py  test_ingest_discover.py  test_ingest_extract.py  test_ingest_fetch.py  test_ingest_group.py  test_ingest_itemize.py  test_ingest_jobs.py  test_ingest_postingest.py  test_ingest_scheduler.py  test_integration_db.py  test_integration_itemize.py  test_log.py  test_main_jobs.py  test_pgstac_writer.py  test_platform_get.py  test_probe.py  test_procrastinate_backend.py  test_queue_interface.py  test_staging_cleanup.py  (+2 more)
(+160 files in other folders)
