[project]
name = "stac-higher-pipeline"
version = "0.1.0"
description = "STAC Higher data-plane pipeline service: ingest, delivery, retention, monitoring workers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "procrastinate>=3.0,<4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "cryptography>=49.0.0",
    "asyncssh>=2.24.0",
    "aioftp>=0.27.2",
    "boto3>=1.43.49",
    "rio-stac==0.12.0",
    "pystac==1.15.1",
    "rasterio>=1.5,<2",
    "stac-pydantic==3.6.0",
    "pypgstac[psycopg]==0.9.11",
    "defusedxml>=0.7.1",
    "cql2>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.27",
]

[project.scripts]
pipeline = "pipeline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
no-build-package = ["rasterio"]
